// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom-Aligned states:  Looks right when With a Text element 1`] = `
<View
  keyboardVerticalOffset={60}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
      }
    }
  >
    hi
  </Text>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e5e5e5",
          "height": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 40,
        "marginBottom": 20,
        "opacity": 1,
        "paddingTop": 18,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Avant Garde Gothic ITCW01Dm",
            "fontSize": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      DONE
    </Text>
  </View>
</View>
`;

exports[`Bottom-Aligned states:  Looks right when With an Artist Search Results Component 1`] = `
<View
  keyboardVerticalOffset={60}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        autoCorrect={false}
        autoFocus={false}
        clearButtonMode="while-editing"
        defaultValue="Artist/Designer Name"
        keyboardAppearance="dark"
        onChangeText={undefined}
        placeholderTextColor="#cccccc"
        returnKeyType="search"
        selectionColor="#cccccc"
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "borderBottomColor": "white",
              "borderBottomWidth": 1,
              "color": "white",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "AGaramondPro-Regular",
              "fontSize": 20,
              "height": 40,
            },
            undefined,
          ]
        }
        value="Banko"
      />
      <ActivityIndicator
        animating={false}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#e5e5e5",
            "height": 1,
          },
          undefined,
        ]
      }
    />
    <RCTScrollView
      scrollEnabled={null}
      style={
        Object {
          "height": 182,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontFamily": "AGaramondPro-Regular",
                "fontSize": 17,
              },
              undefined,
            ]
          }
        >
          Unfortunately we are not accepting consignments for works by 
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontFamily": "AGaramondPro-Italic",
                  "fontSize": 17,
                },
                undefined,
              ]
            }
          >
            Banko
          </Text>
        </Text>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e5e5e5",
          "height": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 40,
        "marginBottom": 20,
        "opacity": 1,
        "paddingTop": 18,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Avant Garde Gothic ITCW01Dm",
            "fontSize": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      DONE
    </Text>
  </View>
</View>
`;
